2005-01-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_type_register): Use tp_base field
	of each base type to compare with PyGInterface_Type, instead of
	PyObject_IsSubclass, because we don't want a class defined as
	class Foo(GObject, SomeInterface) to be itself considered an
	interface when in turn it is subclassed.
	(pyg_type_register): Make "Interface type %s has no python
	implementation support" a warning instead of exception.  This
	really isn't a fatal error and some programs seem to be using
	interfaces in weird ways.

	* codegen/reversewrapper.py (ReverseWrapper.generate): Rename
	variable PyGILState_STATE state to __py_state to avoid possible
	name collision with function parameters.

2005-01-13  John Finlay  <finlay@moeraki.com>

	* gtk/gdk.override (_wrap_gdk_pixmap_colormap_create_from_xpm) 
	(_wrap_gdk_pixmap_create_from_xpm_d) 
	(_wrap_gdk_pixmap_colormap_create_from_xpm_d): Allow first arg
	to be a GdkDrawable. #159282

2005-01-13  Johan Dahlin  <johan@gnome.org>

	* gtk/Makefile.am: Allow it to be built using automake 1.8. Fixes
	bug 163932
	
	* codegen/codegen.py: Only declare the object when it's needed.
	Fixes some more compiler warnings.
	
2005-01-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/codegen.py (Wrapper.write_virtuals): Don't raise
	exception if a do_xxx method is defined and the corresponding
	virtual is not supported, since we may have a signal with the same
	name and the user may be trying to override it.
	Fixes #163606: override size_allocate doesn't work.

	* gobject/pygobject.h, gobject/pygobject-private.h: Revert change
	from 2005-01-09 by me to define pyg_threads_enabled as
	PyEval_ThreadsInitialized() on Python 2.4 and define
	pyg_begin|end_allow_threads as Py_BEGIN|END_ALLOW_THREADS.  Fixes
	#163612: segmentation fault on pygtk-demo.

2005-01-10  Johan Dahlin  <johan@gnome.org>

	* configure.in: post release version bump
	* docs/random/release-checklist:
	Update
