@@ -1,3 +1,9 @@
+2005-01-18  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gtk/gtkmodule.c (init_gtk): On Python >= 2.4, don't call
+	setlocale(LC_NUMERIC, "C"), as it breaks the locale module.  Fixes
+	#164451.
+
 2005-01-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* gobject/gobjectmodule.c (pyg_type_register): Use tp_base field
